k8s/base/product-catalog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: product-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      serviceAccountName: product-catalog
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
          effect: NoSchedule
      containers:
        - name: product-catalog
          image: 416430293265.dkr.ecr.ap-southeast-1.amazonaws.com/nexmart/product-catalog:a3ca9f6554a0018bb161e83e6870d635895220d8
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
