k8s/base/product-catalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: product-catalog
spec:
  selector:
    app: product-catalog
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
